terraform/main.tf

provider "aws" {
  region     = var.aws_region
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_security_group" "server_sg" {
  name        = var.sg_name

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

module "servers" {
  source          = "./modules/server"
  instance_count  = var.instance_count
  ami             = data.aws_ami.ubuntu.id
  instance_type   = var.instance_type
  security_group  = aws_security_group.server_sg.id
  my_public_key   = var.my_public_key
  your_public_key = var.your_public_key
  instance_user   = var.instance_user
}

resource "local_file" "ansible_inventory" {
  content = templatefile("${path.module}/inventory.tpl", {
    primary_ip   = module.servers.public_ip[0],
    replica_ip   = module.servers.public_ip[1],
    instance_user = var.instance_user
  })
  filename = "${path.module}/../ansible/inventory.ini"
}
